# rust-callgraph-benchmark

./: LICENSE.md  README.md
conditionally_compiled/: Cargo.toml
conditionally_compiled/src/: lib.rs
default/: Cargo.toml
default/src/: lib.rs
dynamic/: Cargo.toml
dynamic/src/: lib.rs
dynamic_dispatch/: Cargo.toml
dynamic_dispatch/src/: lib.rs
evaluations/: README.md
evaluations/llvm-opt/: README.md  conditionally_compiled_cg.dot  dynamic_dispatch_cg.dot  function_pointers_cg.dot  generics_cg.dot  macros_cg.dot  main_cg.dot  static_dispatch_cg.dot  structs_cg.dot  traits_cg.dot
evaluations/mirai-cgg/: README.md  call_graph_config.json  conditionally_compiled_cg.dot  dynamic_dispatch_cg.dot  function_pointers_cg.dot  generics_cg.dot  macros_cg.dot  mirai_call_graph.sh  static_dispatch_cg.dot
function_pointers/: Cargo.toml
function_pointers/src/: lib.rs
generics/: Cargo.toml
generics/src/: base.rs  lib.rs
generics/src/sub/: mod.rs  sub.rs  sub1.rs  sub2.rs  traits.rs
macros/: Cargo.toml
macros/macros-derive/: Cargo.toml
macros/src/: lib.rs
main/: Cargo.toml
main/src/: main.rs
src/: README.md
src/conditionally_compiled/: Cargo.toml
src/conditionally_compiled/src/: lib.rs
src/dynamic_dispatch/src/: lib.rs
src/function_pointers/: Cargo.toml
src/generics/: Cargo.toml
src/macros/: Cargo.toml
src/macros/macros-derive/src/: lib.rs
src/macros/src/: lib.rs
src/main/: Cargo.toml
src/static_dispatch/: Cargo.toml
src/structs/: Cargo.toml
src/structs/src/: lib.rs
src/structs/src/lib/: thin.rs
static_dispatch/src/: lib.rs
structs/: Cargo.toml
structs/src/: lib.rs  traits.rs
structs/src/lib/: fat.rs  helloworld.rs  thin.rs
traits/: Cargo.toml
traits/src/: lib.rs
