[package]
name = "function_pointers"
version = "0.1.0"
authors = ["Konstantinos Triantafyllou <ko.trian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structs = { path = "../structs" }
traits = { path = "../traits" }
