[package]
name = "main"
version = "0.1.0"
authors = ["Konstantinos Triantafyllou <ko.trian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
foo = ["conditionally_compiled/foo"]

[dependencies]
conditionally_compiled = { path = "../conditionally_compiled" }
dynamic_dispatch  = { path = "../dynamic_dispatch" }
function_pointers = { path = "../function_pointers" }
generics  = { path = "../generics" }
macros = { path = "../macros" }
static_dispatch = { path = "../static_dispatch" }
structs   = { path = "../structs" }
traits = { path = "../traits" }
